HBASE-29738 : hbase-client to JPMS using --patch-module workaround.